add connection debug config

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -10,5 +10,6 @@
   "database.db": "admin",
   "fetch.mode": "FULL",
   "fetch.resources.pages": 20,
-  "fetch.resources.inverted": true
+  "fetch.resources.inverted": true,
+  "debug.connections": false
 }
