add debug options for resource items & pages

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -11,5 +11,7 @@
   "fetch.mode": "FULL",
   "fetch.resources.pages": 20,
   "fetch.resources.inverted": true,
-  "debug.connections": false
+  "debug.connections": false,
+  "debug.parse.resource.items": false,
+  "debug.parse.resource.page": false
 }
