--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -11,6 +11,7 @@
   "fetch.mode": "FULL",
   "fetch.resources.pages": 20,
   "fetch.resources.inverted": true,
+  "fetch.resources.updates.maxPage": 1,
   "debug.connections": false,
   "debug.parse.resource.items": false,
   "debug.parse.resource.page": false
