--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -9,6 +9,7 @@
   "database.pass": "spiget",
   "database.db": "admin",
   "fetch.mode": "FULL",
+  "request.delay": 500,
   "fetch.resources.pages": 20,
   "fetch.resources.inverted": true,
   "fetch.resources.updates.maxPage": 1,
