--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -13,6 +13,8 @@
   "fetch.resources.pages": 20,
   "fetch.resources.inverted": true,
   "fetch.resources.updates.maxPage": 1,
+  "fetch.resources.download": false,
+  "fetch.resources.downloadBase": "",
   "debug.connections": false,
   "debug.parse.resource.items": false,
   "debug.parse.resource.page": false
