--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -11,6 +11,7 @@
   "fetch.mode": "FULL",
   "request.delay": 500,
   "fetch.resources.pages": 20,
+  "fetch.resources.pageOffset": 0,
   "fetch.resources.inverted": true,
   "fetch.resources.updates.maxPage": 1,
   "fetch.resources.download": false,
