--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -8,13 +8,16 @@
   "database.user": "spiget",
   "database.pass": "spiget",
   "database.db": "admin",
-  "fetch.mode": "FULL",
+  "fetch.mode.resources": true,
+  "fetch.mode.resource.versions": true,
+  "fetch.mode.resource.updates": true,
+  "fetch.mode.resource.reviews": true,
   "request.delay": 500,
   "fetch.resources.pages": 20,
   "fetch.resources.pageOffset": 0,
   "fetch.resources.inverted": true,
   "fetch.resources.updates.maxPage": 1,
-  "fetch.resources.reviews.maxPage":1,
+  "fetch.resources.reviews.maxPage": 1,
   "fetch.resources.download": false,
   "fetch.resources.downloadBase": "",
   "debug.connections": false,
