--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- Parsing -->
+        <dependency>
+            <groupId>org.spiget</groupId>
+            <artifactId>parser</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
