--- a/pom.xml
+++ b/pom.xml
@@ -91,4 +91,11 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>inventive-repo</id>
+            <url>https://repo.inventivetalent.org/content/groups/public/</url>
+        </repository>
+    </repositories>
+
 </project>
