upload resources to b2

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,20 @@
             <version>3.2.0</version>
         </dependency>
 
+        <!-- Backblaze -->
+        <dependency>
+            <groupId>com.backblaze.b2</groupId>
+            <artifactId>b2-sdk-core</artifactId>
+            <version>4.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.backblaze.b2</groupId>
+            <artifactId>b2-sdk-httpclient</artifactId>
+            <version>4.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.inventivetalent</groupId>
             <artifactId>metrics-java</artifactId>
