--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -28,5 +28,6 @@
   "webhook.postThreads": 2,
   "resourceRequest.max": 100,
   "b2.app": "",
-  "b2.key": ""
+  "b2.key": "",
+  "b2.bucket": ""
 }
